--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "fast-isnumeric": "^1.1.1",
     "font-atlas-sdf": "^1.3.3",
     "gl-cone3d": "git@github.com:gl-vis/gl-cone3d",
+    "gl-streamtube3d": "git@github.com:gl-vis/gl-streamtube3d",
     "gl-contour2d": "^1.1.4",
     "gl-error3d": "^1.0.7",
     "gl-heatmap2d": "^1.0.4",
